src/generated/PythonRustParser.cpp

// Generated from grammar/PythonRustParser.g4 by ANTLR 4.13.2


#include "PythonRustParserVisitor.h"

#include "PythonRustParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct PythonRustParserStaticData final {
  PythonRustParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  PythonRustParserStaticData(const PythonRustParserStaticData&) = delete;
  PythonRustParserStaticData(PythonRustParserStaticData&&) = delete;
  PythonRustParserStaticData& operator=(const PythonRustParserStaticData&) = delete;
  PythonRustParserStaticData& operator=(PythonRustParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag pythonrustparserParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<PythonRustParserStaticData> pythonrustparserParserStaticData = nullptr;

void pythonrustparserParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (pythonrustparserParserStaticData != nullptr) {
    return;
  }
#else
  assert(pythonrustparserParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<PythonRustParserStaticData>(
    std::vector<std::string>{
      "program", "stmt", "simple_stmt", "small_stmt", "expr_stmt", "annassign", 
      "return_stmt", "import_stmt", "import_list", "dotted_name", "raise_stmt", 
      "pass_stmt", "flow_stmt", "compound_stmt", "if_stmt", "while_stmt", 
      "for_stmt", "try_stmt", "except_clause", "funcdef", "classdef", "suite", 
      "parameters", "param", "arglist", "argument", "target_list", "target", 
      "testlist", "type", "expr", "subscript", "slice", "atom", "list_maker", 
      "set_or_dict", "dict_kv", "comp_clause"
    },
    std::vector<std::string>{
      "", "", "", "'def'", "'return'", "'if'", "'elif'", "'else'", "'while'", 
      "'for'", "'in'", "'break'", "'continue'", "'pass'", "'try'", "'except'", 
      "'finally'", "'raise'", "'class'", "'import'", "'from'", "'as'", "'True'", 
      "'False'", "'None'", "'and'", "'or'", "'not'", "'->'", "'+'", "'-'", 
      "'*'", "'/'", "'%'", "'=='", "'!='", "'<='", "'>='", "'='", "'<'", 
      "'>'", "'('", "')'", "'['", "']'", "'{'", "'}'", "':'", "','", "'.'"
    },
    std::vector<std::string>{
      "", "INDENT", "DEDENT", "DEF", "RETURN", "IF", "ELIF", "ELSE", "WHILE", 
      "FOR", "IN", "BREAK", "CONTINUE", "PASS", "TRY", "EXCEPT", "FINALLY", 
      "RAISE", "CLASS", "IMPORT", "FROM", "AS", "TRUE", "FALSE", "NONE", 
      "AND", "OR", "NOT", "ARROW", "PLUS", "MINUS", "STAR", "DIV", "MOD", 
      "EQ", "NEQ", "LE", "GE", "ASSIGN", "LT", "GT", "LPAREN", "RPAREN", 
      "LBRACK", "RBRACK", "LBRACE", "RBRACE", "COLON", "COMMA", "DOT", "FLOAT", 
      "INT", "STRING", "ID", "NEWLINE", "LINE_JOIN", "WS", "COMMENT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  pythonrustparserParserStaticData = std::move(staticData);
}

}

PythonRustParser::PythonRustParser(TokenStream *input) : PythonRustParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

PythonRustParser::PythonRustParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  PythonRustParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *pythonrustparserParserStaticData->atn, pythonrustparserParserStaticData->decisionToDFA, pythonrustparserParserStaticData->sharedContextCache, options);
}

PythonRustParser::~PythonRustParser() {
  delete _interpreter;
}

const atn::ATN& PythonRustParser::getATN() const {
  return *pythonrustparserParserStaticData->atn;
}

std::string PythonRustParser::getGrammarFileName() const {
  return "PythonRustParser.g4";
}

const std::vector<std::string>& PythonRustParser::getRuleNames() const {
  return pythonrustparserParserStaticData->ruleNames;
}

const dfa::Vocabulary& PythonRustParser::getVocabulary() const {
  return pythonrustparserParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView PythonRustParser::getSerializedATN() const {
  return pythonrustparserParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

PythonRustParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PythonRustParser::ProgramContext::EOF() {
  return getToken(PythonRustParser::EOF, 0);
}

std::vector<tree::TerminalNode *> PythonRustParser::ProgramContext::NEWLINE() {
  return getTokens(PythonRustParser::NEWLINE);
}

tree::TerminalNode* PythonRustParser::ProgramContext::NEWLINE(size_t i) {
  return getToken(PythonRustParser::NEWLINE, i);
}

std::vector<PythonRustParser::StmtContext *> PythonRustParser::ProgramContext::stmt() {
  return getRuleContexts<PythonRustParser::StmtContext>();
}

PythonRustParser::StmtContext* PythonRustParser::ProgramContext::stmt(size_t i) {
  return getRuleContext<PythonRustParser::StmtContext>(i);
}


size_t PythonRustParser::ProgramContext::getRuleIndex() const {
  return PythonRustParser::RuleProgram;
}


std::any PythonRustParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PythonRustParserVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

PythonRustParser::ProgramContext* PythonRustParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, PythonRustParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(80);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 34949078376676152) != 0)) {
      setState(78);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case PythonRustParser::NEWLINE: {
          setState(76);
          match(PythonRustParser::NEWLINE);
          break;
        }

        case PythonRustParser::DEF:
        case PythonRustParser::RETURN:
        case PythonRustParser::IF:
        case PythonRustParser::WHILE:
        case PythonRustParser::FOR:
        case PythonRustParser::BREAK:
        case PythonRustParser::CONTINUE:
        case PythonRustParser::PASS:
        case PythonRustParser::TRY:
        case PythonRustParser::RAISE:
        case PythonRustParser::CLASS:
        case PythonRustParser::IMPORT:
        case PythonRustParser::FROM:
        case PythonRustParser::TRUE:
        case PythonRustParser::FALSE:
        case PythonRustParser::NONE:
        case PythonRustParser::NOT:
        case PythonRustParser::PLUS:
        case PythonRustParser::MINUS:
        case PythonRustParser::LPAREN:
        case PythonRustParser::LBRACK:
        case PythonRustParser::LBRACE:
        case PythonRustParser::FLOAT:
        case PythonRustParser::INT:
        case PythonRustParser::STRING:
        case PythonRustParser::ID: {
          setState(77);
          stmt();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(82);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(83);
    match(PythonRustParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StmtContext ------------------------------------------------------------------

PythonRustParser::StmtContext::StmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

PythonRustParser::Simple_stmtContext* PythonRustParser::StmtContext::simple_stmt() {
  return getRuleContext<PythonRustParser::Simple_stmtContext>(0);
}

PythonRustParser::Compound_stmtContext* PythonRustParser::StmtContext::compound_stmt() {
  return getRuleContext<PythonRustParser::Compound_stmtContext>(0);
}


size_t PythonRustParser::StmtContext::getRuleIndex() const {
  return PythonRustParser::RuleStmt;
}


std::any PythonRustParser::StmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PythonRustParserVisitor*>(visitor))
    return parserVisitor->visitStmt(this);
  else
    return visitor->visitChildren(this);
}

PythonRustParser::StmtContext* PythonRustParser::stmt() {
  StmtContext *_localctx = _tracker.createInstance<StmtContext>(_ctx, getState());
  enterRule(_localctx, 2, PythonRustParser::RuleStmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(87);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case PythonRustParser::RETURN:
      case PythonRustParser::BREAK:
      case PythonRustParser::CONTINUE:
      case PythonRustParser::PASS:
      case PythonRustParser::RAISE:
      case PythonRustParser::IMPORT:
      case PythonRustParser::FROM:
      case PythonRustParser::TRUE:
      case PythonRustParser::FALSE:
      case PythonRustParser::NONE:
      case PythonRustParser::NOT:
      case PythonRustParser::PLUS:
      case PythonRustParser::MINUS:
      case PythonRustParser::LPAREN:
      case PythonRustParser::LBRACK:
      case PythonRustParser::LBRACE:
      case PythonRustParser::FLOAT:
      case PythonRustParser::INT:
      case PythonRustParser::STRING:
      case PythonRustParser::ID: {
        enterOuterAlt(_localctx, 1);
        setState(85);
        simple_stmt();
        break;
      }

      case PythonRustParser::DEF:
      case PythonRustParser::IF:
      case PythonRustParser::WHILE:
      case PythonRustParser::FOR:
      case PythonRustParser::TRY:
      case PythonRustParser::CLASS: {
        enterOuterAlt(_localctx, 2);
        setState(86);
        compound_stmt();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Simple_stmtContext ------------------------------------------------------------------

PythonRustParser::Simple_stmtContext::Simple_stmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

PythonRustParser::Small_stmtContext* PythonRustParser::Simple_stmtContext::small_stmt() {
  return getRuleContext<PythonRustParser::Small_stmtContext>(0);
}

tree::TerminalNode* PythonRustParser::Simple_stmtContext::NEWLINE() {
  return getToken(PythonRustParser::NEWLINE, 0);
}


size_t PythonRustParser::Simple_stmtContext::getRuleIndex() const {
  return PythonRustParser::RuleSimple_stmt;
}


std::any PythonRustParser::Simple_stmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PythonRustParserVisitor*>(visitor))
    return parserVisitor->visitSimple_stmt(this);
  else
    return visitor->visitChildren(this);
}

PythonRustParser::Simple_stmtContext* PythonRustParser::simple_stmt() {
  Simple_stmtContext *_localctx = _tracker.createInstance<Simple_stmtContext>(_ctx, getState());
  enterRule(_localctx, 4, PythonRustParser::RuleSimple_stmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(89);
    small_stmt();
    setState(90);
    match(PythonRustParser::NEWLINE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Small_stmtContext ------------------------------------------------------------------

PythonRustParser::Small_stmtContext::Small_stmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

PythonRustParser::Expr_stmtContext* PythonRustParser::Small_stmtContext::expr_stmt() {
  return getRuleContext<PythonRustParser::Expr_stmtContext>(0);
}

PythonRustParser::Return_stmtContext* PythonRustParser::Small_stmtContext::return_stmt() {
  return getRuleContext<PythonRustParser::Return_stmtContext>(0);
}

PythonRustParser::Import_stmtContext* PythonRustParser::Small_stmtContext::import_stmt() {
  return getRuleContext<PythonRustParser::Import_stmtContext>(0);
}

PythonRustParser::Raise_stmtContext* PythonRustParser::Small_stmtContext::raise_stmt() {
  return getRuleContext<PythonRustParser::Raise_stmtContext>(0);
}

PythonRustParser::Pass_stmtContext* PythonRustParser::Small_stmtContext::pass_stmt() {
  return getRuleContext<PythonRustParser::Pass_stmtContext>(0);
}

PythonRustParser::Flow_stmtContext* PythonRustParser::Small_stmtContext::flow_stmt() {
  return getRuleContext<PythonRustParser::Flow_stmtContext>(0);
}


size_t PythonRustParser::Small_stmtContext::getRuleIndex() const {
  return PythonRustParser::RuleSmall_stmt;
}


std::any PythonRustParser::Small_stmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PythonRustParserVisitor*>(visitor))
    return parserVisitor->visitSmall_stmt(this);
  else
    return visitor->visitChildren(this);
}

PythonRustParser::Small_stmtContext* PythonRustParser::small_stmt() {
  Small_stmtContext *_localctx = _tracker.createInstance<Small_stmtContext>(_ctx, getState());
  enterRule(_localctx, 6, PythonRustParser::RuleSmall_stmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(98);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case PythonRustParser::TRUE:
      case PythonRustParser::FALSE:
      case PythonRustParser::NONE:
      case PythonRustParser::NOT:
      case PythonRustParser::PLUS:
      case PythonRustParser::MINUS:
      case PythonRustParser::LPAREN:
      case PythonRustParser::LBRACK:
      case PythonRustParser::LBRACE:
      case PythonRustParser::FLOAT:
      case PythonRustParser::INT:
      case PythonRustParser::STRING:
      case PythonRustParser::ID: {
        enterOuterAlt(_localctx, 1);
        setState(92);
        expr_stmt();
        break;
      }

      case PythonRustParser::RETURN: {
        enterOuterAlt(_localctx, 2);
        setState(93);
        return_stmt();
        break;
      }

      case PythonRustParser::IMPORT:
      case PythonRustParser::FROM: {
        enterOuterAlt(_localctx, 3);
        setState(94);
        import_stmt();
        break;
      }

      case PythonRustParser::RAISE: {
        enterOuterAlt(_localctx, 4);
        setState(95);
        raise_stmt();
        break;
      }

      case PythonRustParser::PASS: {
        enterOuterAlt(_localctx, 5);
        setState(96);
        pass_stmt();
        break;
      }

      case PythonRustParser::BREAK:
      case PythonRustParser::CONTINUE: {
        enterOuterAlt(_localctx, 6);
        setState(97);
        flow_stmt();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Expr_stmtContext ------------------------------------------------------------------

PythonRustParser::Expr_stmtContext::Expr_stmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<PythonRustParser::TestlistContext *> PythonRustParser::Expr_stmtContext::testlist() {
  return getRuleContexts<PythonRustParser::TestlistContext>();
}

PythonRustParser::TestlistContext* PythonRustParser::Expr_stmtContext::testlist(size_t i) {
  return getRuleContext<PythonRustParser::TestlistContext>(i);
}

PythonRustParser::AnnassignContext* PythonRustParser::Expr_stmtContext::annassign() {
  return getRuleContext<PythonRustParser::AnnassignContext>(0);
}

std::vector<tree::TerminalNode *> PythonRustParser::Expr_stmtContext::ASSIGN() {
  return getTokens(PythonRustParser::ASSIGN);
}

tree::TerminalNode* PythonRustParser::Expr_stmtContext::ASSIGN(size_t i) {
  return getToken(PythonRustParser::ASSIGN, i);
}


size_t PythonRustParser::Expr_stmtContext::getRuleIndex() const {
  return PythonRustParser::RuleExpr_stmt;
}


std::any PythonRustParser::Expr_stmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PythonRustParserVisitor*>(visitor))
    return parserVisitor->visitExpr_stmt(this);
  else
    return visitor->visitChildren(this);
}

PythonRustParser::Expr_stmtContext* PythonRustParser::expr_stmt() {
  Expr_stmtContext *_localctx = _tracker.createInstance<Expr_stmtContext>(_ctx, getState());
  enterRule(_localctx, 8, PythonRustParser::RuleExpr_stmt);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(100);
    testlist();
    setState(109);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case PythonRustParser::COLON: {
        setState(101);
        annassign();
        break;
      }

      case PythonRustParser::ASSIGN:
      case PythonRustParser::NEWLINE: {
        setState(106);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == PythonRustParser::ASSIGN) {
          setState(102);
          match(PythonRustParser::ASSIGN);
          setState(103);
          testlist();
          setState(108);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AnnassignContext ------------------------------------------------------------------

PythonRustParser::AnnassignContext::AnnassignContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PythonRustParser::AnnassignContext::COLON() {
  return getToken(PythonRustParser::COLON, 0);
}

PythonRustParser::TypeContext* PythonRustParser::AnnassignContext::type() {
  return getRuleContext<PythonRustParser::TypeContext>(0);
}

tree::TerminalNode* PythonRustParser::AnnassignContext::ASSIGN() {
  return getToken(PythonRustParser::ASSIGN, 0);
}

PythonRustParser::TestlistContext* PythonRustParser::AnnassignContext::testlist() {
  return getRuleContext<PythonRustParser::TestlistContext>(0);
}


size_t PythonRustParser::AnnassignContext::getRuleIndex() const {
  return PythonRustParser::RuleAnnassign;
}


std::any PythonRustParser::AnnassignContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PythonRustParserVisitor*>(visitor))
    return parserVisitor->visitAnnassign(this);
  else
    return visitor->visitChildren(this);
}

PythonRustParser::AnnassignContext* PythonRustParser::annassign() {
  AnnassignContext *_localctx = _tracker.createInstance<AnnassignContext>(_ctx, getState());
  enterRule(_localctx, 10, PythonRustParser::RuleAnnassign);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(111);
    match(PythonRustParser::COLON);
    setState(112);
    type();
    setState(115);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == PythonRustParser::ASSIGN) {
      setState(113);
      match(PythonRustParser::ASSIGN);
      setState(114);
      testlist();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Return_stmtContext ------------------------------------------------------------------

PythonRustParser::Return_stmtContext::Return_stmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PythonRustParser::Return_stmtContext::RETURN() {
  return getToken(PythonRustParser::RETURN, 0);
}

PythonRustParser::TestlistContext* PythonRustParser::Return_stmtContext::testlist() {
  return getRuleContext<PythonRustParser::TestlistContext>(0);
}


size_t PythonRustParser::Return_stmtContext::getRuleIndex() const {
  return PythonRustParser::RuleReturn_stmt;
}


std::any PythonRustParser::Return_stmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PythonRustParserVisitor*>(visitor))
    return parserVisitor->visitReturn_stmt(this);
  else
    return visitor->visitChildren(this);
}

PythonRustParser::Return_stmtContext* PythonRustParser::return_stmt() {
  Return_stmtContext *_localctx = _tracker.createInstance<Return_stmtContext>(_ctx, getState());
  enterRule(_localctx, 12, PythonRustParser::RuleReturn_stmt);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(117);
    match(PythonRustParser::RETURN);
    setState(119);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 16934679865196544) != 0)) {
      setState(118);
      testlist();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Import_stmtContext ------------------------------------------------------------------

PythonRustParser::Import_stmtContext::Import_stmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PythonRustParser::Import_stmtContext::IMPORT() {
  return getToken(PythonRustParser::IMPORT, 0);
}

PythonRustParser::Dotted_nameContext* PythonRustParser::Import_stmtContext::dotted_name() {
  return getRuleContext<PythonRustParser::Dotted_nameContext>(0);
}

tree::TerminalNode* PythonRustParser::Import_stmtContext::AS() {
  return getToken(PythonRustParser::AS, 0);
}

tree::TerminalNode* PythonRustParser::Import_stmtContext::ID() {
  return getToken(PythonRustParser::ID, 0);
}

tree::TerminalNode* PythonRustParser::Import_stmtContext::FROM() {
  return getToken(PythonRustParser::FROM, 0);
}

PythonRustParser::Import_listContext* PythonRustParser::Import_stmtContext::import_list() {
  return getRuleContext<PythonRustParser::Import_listContext>(0);
}


size_t PythonRustParser::Import_stmtContext::getRuleIndex() const {
  return PythonRustParser::RuleImport_stmt;
}


std::any PythonRustParser::Import_stmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PythonRustParserVisitor*>(visitor))
    return parserVisitor->visitImport_stmt(this);
  else
    return visitor->visitChildren(this);
}

PythonRustParser::Import_stmtContext* PythonRustParser::import_stmt() {
  Import_stmtContext *_localctx = _tracker.createInstance<Import_stmtContext>(_ctx, getState());
  enterRule(_localctx, 14, PythonRustParser::RuleImport_stmt);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(132);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case PythonRustParser::IMPORT: {
        enterOuterAlt(_localctx, 1);
        setState(121);
        match(PythonRustParser::IMPORT);
        setState(122);
        dotted_name();
        setState(125);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == PythonRustParser::AS) {
          setState(123);
          match(PythonRustParser::AS);
          setState(124);
          match(PythonRustParser::ID);
        }
        break;
      }

      case PythonRustParser::FROM: {
        enterOuterAlt(_localctx, 2);
        setState(127);
        match(PythonRustParser::FROM);
        setState(128);
        dotted_name();
        setState(129);
        match(PythonRustParser::IMPORT);
        setState(130);
        import_list();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Import_listContext ------------------------------------------------------------------

PythonRustParser::Import_listContext::Import_listContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PythonRustParser::Import_listContext::STAR() {
  return getToken(PythonRustParser::STAR, 0);
}

std::vector<tree::TerminalNode *> PythonRustParser::Import_listContext::ID() {
  return getTokens(PythonRustParser::ID);
}

tree::TerminalNode* PythonRustParser::Import_listContext::ID(size_t i) {
  return getToken(PythonRustParser::ID, i);
}

std::vector<tree::TerminalNode *> PythonRustParser::Import_listContext::AS() {
  return getTokens(PythonRustParser::AS);
}

tree::TerminalNode* PythonRustParser::Import_listContext::AS(size_t i) {
  return getToken(PythonRustParser::AS, i);
}

std::vector<tree::TerminalNode *> PythonRustParser::Import_listContext::COMMA() {
  return getTokens(PythonRustParser::COMMA);
}

tree::TerminalNode* PythonRustParser::Import_listContext::COMMA(size_t i) {
  return getToken(PythonRustParser::COMMA, i);
}


size_t PythonRustParser::Import_listContext::getRuleIndex() const {
  return PythonRustParser::RuleImport_list;
}


std::any PythonRustParser::Import_listContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PythonRustParserVisitor*>(visitor))
    return parserVisitor->visitImport_list(this);
  else
    return visitor->visitChildren(this);
}

PythonRustParser::Import_listContext* PythonRustParser::import_list() {
  Import_listContext *_localctx = _tracker.createInstance<Import_listContext>(_ctx, getState());
  enterRule(_localctx, 16, PythonRustParser::RuleImport_list);
  size_t _la = 0;
